# promptheus2

./: .env.example  .gitignore  BUG-claude-switch.md  CLAUDE.md  DOCS.md  IDLE_FREEZE_INVESTIGATION.md  LICENSE  README.md  context-editor.html  context-menu.html  conversation-dialog.html  history-dialog.html  image-preview.html  index.html  notification.html  package.json  palette-backdrop.html  palette.html  plan.md  pnpm-lock.yaml  prompt-dialog.html  provider-menu.html  settings-dialog.html  shell-toolbar.html  tatus  text-preview.html  tsconfig.json  vite.config.ts
docs/: api-verification.md  logging-config.docs.md  logging-levels.docs.md  logging-sensitivity.docs.md  logging.docs.md
src/: App.svelte  ContextEditorApp.svelte  (+28 more)
src-tauri/: Cargo.toml  DOCS.md  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: context_section.md  default_settings.json  input_format_guide.md
src-tauri/resources/prompts/base/: about_you.md  environment.md  input_format.md  system.md
src-tauri/resources/prompts/surfaces/: speech_to_text.md  title_generation.md
src-tauri/resources/skills/process-with-context/: SKILL.md
src-tauri/resources/skills/prompt-execute/: SKILL.md
src-tauri/resources/skills/prompt-refine/: SKILL.md
src-tauri/resources/skills/translate-english/: SKILL.md
src-tauri/resources/skills/translate-polish/: SKILL.md
src-tauri/src/: error.rs  lib.rs  traits.rs
src-tauri/src/commands/: ai.rs  ai_webview.rs  clipboard.rs  context.rs  context_editor.rs  conversation_dialog.rs  dock.rs  execution.rs  execution_control.rs  execution_generation.rs  execution_stream.rs  fs.rs  history.rs  history_dialog.rs  image_preview.rs  mcp.rs  menu.rs  mod.rs  notification.rs  prompt_dialog.rs  prompt_execution.rs  prompts.rs  provider_menu.rs  settings.rs  settings_dialog.rs  skills.rs  speech.rs  text_preview.rs  tokenizer.rs  ui_state.rs
src-tauri/src/models/: DOCS.md  ai.rs  capabilities.rs  context.rs  execution.rs  history.rs  menu.rs  message.rs  mod.rs  settings.rs  skill.rs  speech.rs
src-tauri/src/providers/: history_provider.rs  mod.rs  prompt_menu_provider.rs  skill_menu_provider.rs  speech_provider.rs
src-tauri/src/services/: DOCS.md  ai_providers.rs  ai_webview.rs  autostart.rs  capability_audit.rs  clipboard.rs  config.rs  context.rs  conversation_context.rs  conversation_dialog.rs  database.rs  dialog.rs  dock.rs  env_resolve.rs  execution.rs  history.rs  history_events.rs  history_search.rs  hotkeys.rs  image_storage.rs  macos_panel.rs  menu_coordinator.rs  mod.rs  monitor.rs  notification.rs  placeholder.rs  placeholder_registry.rs  prompt_execution.rs  recent_apps.rs  shell_env.rs  skill.rs  skill_execution.rs  skill_message.rs  speech.rs  sqlite_history.rs  tokenizer.rs  tool_confirmation.rs  ui_state.rs  webkit_pressure.rs
src-tauri/src/services/ai/: capabilities.rs  encoder.rs  mod.rs  openai.rs  openai_responses.rs  provider.rs  sse.rs  tools.rs
src-tauri/src/services/ai_webview/: cold_suspend.rs  external_links.rs  lifecycle.rs  mod.rs  palette.rs  provider_swap.rs  scripts.rs
src-tauri/src/services/config/: defaults.rs  loader.rs  migrator.rs  mod.rs  path.rs  prompts.rs  tests.rs
src-tauri/src/services/execution/: conversation_executor.rs  lifecycle.rs  mod.rs  parameters.rs  skill_executor.rs  stream.rs  system_prompt.rs  types.rs
src-tauri/src/services/frontmost_app/: fallback.rs  linux.rs  macos.rs  mod.rs
src-tauri/src/services/mcp/: DOCS.md  client.rs  mod.rs  registry.rs
src-tauri/src/services/skill/: mod.rs  parser.rs
src-tauri/src/services/speech/: mod.rs  recorder.rs  transcriber.rs
src-tauri/src/services/sqlite_history/: codec.rs  mod.rs  tests.rs
src-tauri/src/setup/: background.rs  init.rs  log.rs  menu.rs  mod.rs  shortcuts.rs  state.rs  tray.rs  windows.rs
(+294 files in other folders)
