[package]
name = "promptheus-tauri"
version = "0.1.0"
description = "Promptheus desktop application"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "promptheus-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "=2.10.3", features = ["macos-private-api", "tray-icon", "image-png", "unstable"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2.5.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "macros"] }
arboard = { version = "3", features = ["image-data"] }
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
chrono = "0.4"
regex = "1"
serde_yaml = "0.9"
reqwest = { version = "0.13", features = ["json", "stream", "multipart"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
urlencoding = "2"
cpal = "0.17"
hound = "3.5"
tiktoken-rs = "0.9"
claude-tokenizer = "0.3"
gemini-tokenizer = "0.2"
rusqlite = { version = "0.39", features = ["bundled"] }
rmcp = { version = "1.4", features = ["client", "transport-child-process", "transport-io"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", features = ["v3_24"] }
gdkx11 = "0.18"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
